add some debug message , pass argument to cc

--- a/task05/Makefile
+++ b/task05/Makefile
@@ -9,6 +9,7 @@ WORKDIR = /lib/modules/$(KERVER)/build
 
 #obj-m := hello.o
 obj-m := hello2.o
+ccflags-y := -DDEBUG 
 
 modules:
 	$(MAKE) -C $(WORKDIR) M=$(PWD) modules
